--- a/index.html
+++ b/index.html
@@ -4,10 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DES 157A Portal Page</title>
+    <!-- Normalize CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans&family=Inria+Serif&family=Josefin+Slab&display=swap" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Portal Page for DES 157A Fall 2025</h1>
-    <p>Here is a paragraph</p>
-    <a href="exp/exp1.html">experiment 1</a>
+    <div class="container">
+        <!-- Header -->
+        <header>
+            <h1>ShengJie Sun</h1>
+
+            <!-- 阶梯式 DES 157A 信息 -->
+            <div class="staircase">
+                <div class="left">DES 157A</div>
+                <div class="center">Interactive Media II</div>
+                <div class="right">Winter 2025</div>
+            </div>
+        </header>
+
+        <!-- Banner (独立) -->
+        <div id="banner">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <!-- Main content -->
+        <main class="columns">
+            <section>
+                <h2 class="circle-title">Research</h2>
+                <ul>
+                    <li><a href="#">Learning Journal</a></li>
+                    <li><a href="#">Experiment 1</a></li>
+                    <li><a href="#">Experiment 2</a></li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="circle-title">MadLib</h2>
+                <ul>
+                    <li><a href="#">Design Version 1</a></li>
+                    <li><a href="#">Design Version 2</a></li>
+                    <li><a href="#">Code Version 1</a></li>
+                    <li><a href="#">Final MadLib Project</a></li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="circle-title">Every Picture</h2>
+                <ul>
+                    <li><a href="#">Experiments</a></li>
+                    <li><a href="#">Design Comp</a></li>
+                    <li><a href="#">Code Version 1</a></li>
+                    <li><a href="#">Final Every Picture Project</a></li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="circle-title">Game On</h2>
+                <ul>
+                    <li><a href="#">Design Version 1</a></li>
+                    <li><a href="#">Design Version 2</a></li>
+                    <li><a href="#">Code Version 1</a></li>
+                    <li><a href="#">Final Game On Project</a></li>
+                </ul>
+            </section>
+        </main>
+
+        <!-- Footer -->
+        <footer>
+            <p><a href="mailto:asjsun@ucdavis.edu">Email Me</a></p>
+        </footer>
+    </div>
 </body>
 </html>
+
+
+
+
