--- a/exp/exp2.html
+++ b/exp/exp2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Experiment 2</h1>
-        <h2>Open the concole from Google Chrome and right click use inspect to see the functionality of the code.</h2>
+        <h2>Open the console from Google Chrome and right click use inspect to see the functionality of the code.</h2>
 
         <script>
            var Rows = 15;
