--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <h2 class="circle-title">Research</h2>
                 <ul>
                     <li><a href="#">Learning Journal</a></li>
-                    <li><a href="exp/exp1.html">Experiment 1</a></li>
-                    <li><a href="exp/exp2.html">Experiment 2</a></li>
+                    <li><a href="/DES157A/exp/exp1.html">Experiment 1</a></li>
+                    <li><a href="/DES157A/exp/exp2.html">Experiment 2</a></li>
                 </ul>
             </section>
 
