--- a/madlibs/index.html
+++ b/madlibs/index.html
@@ -24,7 +24,7 @@
 <body>
     <h1>Midlabs Sketches</h1>
 
-    <img src=".images/midlabssketches.jpg" alt="midlab sketches">
+    <img src="/DES157A/madlibs/images/midlabssketches.jpg" alt="midlab sketches">
     <img src="/DES157A/madlibs/images/v1.png" alt="midlab v1">
     <img src="/DES157A/madlibs/images/v1.2.png" alt="midlab v1.2">
     <img src="/DES157A/madlibs/images/V1full.png" alt="midlab v1 full">
