--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <section>
                 <h2 class="circle-title">Research</h2>
                 <ul>
-                    <li><a href="#">Learning Journal</a></li>
+                    <li><a href="/DES157A/Journal/images/lj-sketch.jpg">Learning Journal Sketch</a></li>
+                    <li><a href="/DES157A/Journal/index.html">Learning Journal</a></li>
                     <li><a href="/DES157A/exp/exp1.html">Experiment 1</a></li>
                     <li><a href="/DES157A/exp/exp2.html">Experiment 2</a></li>
                 </ul>
