--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="/DES157A/madlibs/index.html">Design Version 1</a></li>
                     <li><a href="#">Design Version 2</a></li>
                     <li><a href="/DES157A/madlibs/v1/index.html">Code Version 1</a></li>
-                    <li><a href="#">Final MadLib Project</a></li>
+                    <li><a href="/DES157A/madlibs/v2final/index.html">Final MadLib Project</a></li>
                 </ul>
             </section>
 
