--- a/Journal/index.html
+++ b/Journal/index.html
@@ -76,7 +76,7 @@
           <p>This image is part of a larger theme in my archive, which focuses on my collection of objects that are both visually striking and thoughtfully crafted. Together, these items tell a story about my interests, aesthetic sensibilities, and appreciation for design and artisanal quality. They reveal aspects of my character that may not be apparent at first glance, such as my attention to detail and my fascination with rare or meaningful objects.</p>
           <p>To make the image more compelling, I would experiment with lighting and atmosphere. Adjusting the light could emphasize the materials and textures of the glasses, while creating a particular mood or setting could enhance the emotional and visual impact. By carefully controlling these elements, the image would better convey not only the physical beauty of the collectible but also the personal connection and narrative behind it.</p>
           <figure>
-            <img src="/Journal/images/glasses-026.jpg" alt="A laptop covered with colorful stickers">
+            <img src="/Journal/images/glasses-026.jpg" alt="A hand craft glasses">
             <figcaption>© [ShengJie Sun], 2025</figcaption>
           </figure>
         </div>
