--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <section>
                 <h2 class="circle-title">Every Picture</h2>
                 <ul>
-                    <li><a href="#">Experiments</a></li>
-                    <li><a href="#">Design Comp</a></li>
-                    <li><a href="#">Code Version 1</a></li>
-                    <li><a href="#">Final Every Picture Project</a></li>
+                    <li><a href="/DES157A/EveryPicture/experiment/">Experiments</a></li>
+                    <li><a href="/DES157A/EveryPicture/project-development/">Project-development</a></li>
+                    <li><a href="/DES157A/EveryPicture/v1-html-css-only/">V1-html-css-only</a></li>
+                    <li><a href="/DES157A/EveryPicture/v2-final-version/">V2-final-version</a></li>
                 </ul>
             </section>
 
