--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <section>
                 <h2 class="circle-title">Game On</h2>
                 <ul>
-                    <li><a href="#">Design Version 1</a></li>
+                    <li><a href="/DES157A/game/index.html">Design Version 1</a></li>
                     <li><a href="#">Design Version 2</a></li>
                     <li><a href="#">Code Version 1</a></li>
                     <li><a href="#">Final Game On Project</a></li>
