--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul>
                     <li><a href="/DES157A/game/index.html">Design Version 1</a></li>
                     <li><a href="#">Design Version 2</a></li>
-                    <li><a href="#">Code Version 1</a></li>
+                    <li><a href="/DES157A/game/v1-htmlonly/index.html">V1-html-css-only</a></li>
                     <li><a href="#">Final Game On Project</a></li>
                 </ul>
             </section>
